Bug 417104 - printout dark when in dark breeze theme used
Summary: printout dark when in dark breeze theme used
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-03 13:29 UTC by Martin Tlustos
Modified: 2024-08-17 20:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2020-02-03 13:29:50 UTC
SUMMARY
When the dark breeze theme is used, the printout prints a dark background. It would be nicer (and use much less ink) if the printout used the normal breeze theme

STEPS TO REPRODUCE
1. set plasma to use breeze-dark theme
2. start kmymoney
3. produce a report
4. print (to pdf or printer)

OBSERVED RESULT
the printout will have a dark background (like in the display)

EXPECTED RESULT
the printout should have a white background
Operating System: KDE neon 5.17
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.13.2
Kernel Version: 4.15.0-76-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 7,7 GiB
Comment 1 Ralf Habacker 2021-11-18 08:16:58 UTC
This problem was investigated at https://invent.kde.org/office/kmymoney/-/merge_requests/118#note_336185. The reason for this problem is a bug in one of the Qt libraries, see https://bugreports.qt.io/browse/QTBUG-98408.
Comment 2 Ralf Habacker 2021-11-18 09:21:44 UTC
(In reply to Ralf Habacker from comment #1)
> see https://bugreports.qt.io/browse/QTBUG-98408.

Note: The bug report refers to the use of QTextDocument-based widgets in kmymoney. If this problem also occurs with KWebView (WebKit) or QWebEngineView, that would need to be investigated.
Comment 3 Dawid Wróbel 2022-03-14 22:50:59 UTC
Git commit 27fc5b843a5f2ffd00d01d9540fdbe56d3197c48 by Dawid Wróbel.
Committed on 14/03/2022 at 13:02.
Pushed by wrobelda into branch 'master'.

Print, Print Preview: use correct CSS @media block

Works around the https://bugreports.qt.io/browse/QTBUG-98408 issue.

Adds new KMMTextBrowser type, overriding QTextBrowser.
Related: bug 429469

M  +13   -0    kmymoney/misc/CMakeLists.txt
A  +51   -0    kmymoney/misc/kmmtextbrowser.cpp     [License: GPL(v2.0+)]
A  +28   -0    kmymoney/misc/kmmtextbrowser.h     [License: GPL(v2.0+)]
M  +1    -0    kmymoney/plugins/reconciliationreport/CMakeLists.txt
M  +3    -3    kmymoney/plugins/reconciliationreport/kreconciliationreportdlg.cpp
M  +3    -3    kmymoney/plugins/reconciliationreport/kreconciliationreportdlg.h
M  +1    -0    kmymoney/plugins/views/reports/CMakeLists.txt
M  +1    -1    kmymoney/plugins/views/reports/kreportsview.h
M  +14   -14   kmymoney/plugins/views/reports/kreportsview_p.h
M  +1    -0    kmymoney/views/CMakeLists.txt
M  +1    -0    kmymoney/views/khomeview.h
M  +17   -17   kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/commit/27fc5b843a5f2ffd00d01d9540fdbe56d3197c48